# planning

./: README.md
TrajOpt/: .clang-format  CMakeLists.txt  build.sh  main.cpp
TrajOpt/ALTRO/: CMakeLists.txt
TrajOpt/ALTRO/altro/: CMakeLists.txt  altro_solver.cpp  altro_solver.hpp
TrajOpt/ALTRO/altro/solver/: CMakeLists.txt  cones.hpp  exceptions.hpp  knotpoint_data.cpp  knotpoint_data.hpp  shifted_vector.hpp  solver.hpp  solver_options.hpp  solver_stats.hpp  typedefs.hpp
TrajOpt/ALTRO/altro/utils/: formatting.hpp
TrajOpt/ALTRO/altrocpp/: CMakeLists.txt  README.md
TrajOpt/ALTRO/altrocpp/altro/: CMakeLists.txt  eigentypes.hpp
TrajOpt/ALTRO/altrocpp/altro/augmented_lagrangian/: CMakeLists.txt  al_cost.hpp  al_solver.hpp
TrajOpt/ALTRO/altrocpp/altro/common/: CMakeLists.txt  exceptions.cpp  exceptions.hpp  functionbase.hpp  knotpoint.hpp  log_entry.hpp  profile_entry.hpp  solver_logger.hpp  solver_options.hpp  solver_stats.hpp  state_control_sized.hpp  threadpool.cpp  threadpool.hpp  threadpool_impl.cpp  threadpool_impl.hpp  threadpool_mock.cpp  threadpool_mock.hpp  threadsafe_queue.hpp  timer.cpp  timer.hpp  trajectory.hpp
TrajOpt/ALTRO/altrocpp/altro/constraints/: CMakeLists.txt  constraint.hpp  constraint_values.hpp
TrajOpt/ALTRO/altrocpp/altro/ilqr/: CMakeLists.txt  cost_expansion.hpp  dynamics_expansion.hpp  ilqr.hpp  knot_point_function_type.hpp
TrajOpt/ALTRO/altrocpp/altro/problem/: CMakeLists.txt  costfunction.hpp  discretized_model.hpp  dynamics.hpp  integration.hpp  problem.hpp
TrajOpt/ALTRO/altrocpp/altro/utils/: CMakeLists.txt  assert.hpp  benchmarking.hpp  derivative_checker.hpp  formatting.hpp  utils.hpp
TrajOpt/ALTRO/altrocpp/cmake/: Config.cmake.in  Functions.cmake
TrajOpt/ALTRO/altrocpp/dev/brian/: CMakeLists.txt
TrajOpt/ALTRO/altrocpp/examples/: basic_constraints.hpp  obstacle_constraints.hpp  quadratic_cost.hpp  triple_integrator.hpp  unicycle.hpp
TrajOpt/ALTRO/altrocpp/examples/problems/: triple_integrator.hpp  unicycle.hpp
TrajOpt/ALTRO/altrocpp_interface/: CMakeLists.txt  altrocpp_interface.hpp
TrajOpt/ALTRO/fmt/include/fmt/: format.h  ranges.h
TrajOpt/ALTRO/linesearch/: CMakeLists.txt  cubicspline.h  linesearch.cpp  linesearch.h  linesearch.hpp
TrajOpt/ALTRO/tvlqr/: CMakeLists.txt  tvlqr.h
TrajOpt/Common/: binary.h  common.h  log.h  log_writer.h  types.cpp  types.h  util.h
TrajOpt/Config/: rviz.rviz
TrajOpt/Constraints/: bound_matrix.xlsx  bounds.h  collision.h  collision.nb  esd_based_risk.h
TrajOpt/Cost/: cost.cpp  cost.h  cost.nb  cost.tex  cost.txt  cost_Gaussian_functions.nb  cost_ellipse.nb  test_cost.cpp
TrajOpt/Interfaces/: lane_change.h  planner_node.cpp  planner_node.h  safe_speed.h  solver_interface.h
TrajOpt/Map/: RoadNet.h  RoadNet.xml  RoadNet_copy.xml  RoadNet_copy_copy.xml  UpdateRoadNet.py  curve.h  dae_file.py  discrete_points_math.cc  discrete_points_math.h  reference_line.h  road.h  routing.h
TrajOpt/Model/: Frenet-Cartesian.nb  integrator.cpp  integrator.h  model.cpp  model.h
TrajOpt/OCS2/: CMakeLists.txt  dynamic.h  main.cpp
TrajOpt/OCS2/ocs2_core/: CMakeLists.txt
TrajOpt/OCS2/ocs2_core/include/ocs2_core/integration/: TrapezoidalIntegration.h
TrajOpt/OCS2/ocs2_ddp/: CMakeLists.txt
TrajOpt/OCS2/ocs2_mpc/: CMakeLists.txt
TrajOpt/OCS2/ocs2_oc/: CMakeLists.txt
TrajOpt/Params/: default_param.h  default_param.json
TrajOpt/PathSegment/: CMakeLists.txt  aabox2d.cc  aabox2d.h  aaboxkdtree2d.h  box2d.cc  box2d.h  line_segment2d.cc  line_segment2d.h  math_utils.cc  math_utils.h  path.cc  path.h  polygon2d.cc  polygon2d.h  vec2d.cc  vec2d.h
TrajOpt/Prediction/: intelligent_driver_model.cpp  intelligent_driver_model.h  prediction_model.h  prediction_trajectory.cpp  prediction_trajectory.h
TrajOpt/Scenarios/: scenarios.h  scenarios.json  test_scenarios.cpp
TrajOpt/TrafficRules/: crosswalk.cpp  crosswalk.h  traffic_light.cc  traffic_light.h  traffic_light_controller.h  traffic_light_node.h  traffic_rule.json  traffic_rule_parse.h  util.h  vehicle_speed_decider.cpp  vehicle_speed_decider.h
TrajOpt/Visualization/: matplotlibcpp.h  plot.h  visualization.cpp  visualization.h
